4.5 -> 5.0:
    - rse: drop support for internal lua/ at all to make piece with Automake (as lua/ build-env was not stand-alone)
    - jbj: no longer ship an internal copy of Lua with the RPM distribution
    - jbj: refactor rpmio.h include out of header files.
    - jbj: patch macro seems sufficiently functional, delete the old "stuff".
    - jbj: add stub vectors for rpmio I/O API.
    - jbj: drop support for internal lua.
    - jbj: add (preliminary) WR configuration.
    - rse: support building against external stock Lua 5.1.2, too
    - rse: upgraded the local Lua copy from version 5.0.2 to 5.1.2
    - jbj: remove network transport from all rpm libraries.
    - jbj: don't close stdout by mistake (OpenSuSE).
    - jbj: run checkfiles even if failure is imminent (OpenSuSE).
    - jbj: rip compiled in %patch, breaking remote patch fetching.
    - jbj: fixup %patchNN rewrite.
    - jbj: add osgi automagic dependency extractors <klee@redhat.com>.
    - jbj: debugedit warning removal <pmatlai@redhat.com>.
    - jbj: free 5 bits in FCOLOR_e for future use. 
    - jbj: add arbitrary tag strings to header metadata.
    - mgh: transform %patchNN to %patch -P NN
    - jbj: add mono automagic dependency extractors.
    - jbj: insure that RPMFILE_EXISTS is set for %config files.
    - jbj: revert the _GetPass() hack-a-round.
    - jbj: set a default 0022 umask value always (#83006).
    - rse: remove the already obsolete rpm.c
    - rse/jbj: eliminated all major compile-time warnings
    - rse: cleanup API by changing argument 2 of rpmDigestFinal() from "void **" to "void *"
    - rse: make directory checking for %docdir more strict to avoid false positives
    - jbj: perform fsync(2) before closing installed file.
    - jbj: default RPMCANONCOLOR to 3 everywhere but ia64 and mips*.
    - rse: remove now unused LIBDIR (--with-path-lib) from Autoconf and rename --with-path-usrlib to --with-path-lib